# proyecto-osint-manuelita

./: .env.example  .gitattributes  .gitignore  README.md  app.py  hello.py  pyproject.toml  requirements.txt
data_processed/json/: news_index.json  normalized_manuelita_social_linkedin_2026.json  normalized_manuelita_web_f2a1c3b8_2026041.json
data_processed/markdown/: _INDICE_MAESTRO.md  financiero_supersociedades_manuelit.md  oficial_doc_manuelit.md  oficial_pdf_sostenibilidad_manuelit.md  oficial_perfil_manuelit.md  red_social_linkedin_manuelit.md  red_social_youtube_manuelit.md
data_raw/social/: facebook_metadata.json  instagram_metadata.json  linkedin_metadata.json  social_summary.json  youtube_metadata.json
data_raw/youtube/: canal_manuelita.json  canal_manuelita_fallback.json  playlists.json  videos_lista.json
reports/: fase1_mapa_fuentes.md  informe_modulo1_qa_manuelita.docx  informe_modulo1_qa_manuelita.tex  informe_tecnico_proyecto_ia_agroindustrial.md  resultados_20_preguntas_gemini_20260429_003220.json  resultados_20_preguntas_gemini_20260429_003220.txt  session_manuelita_20260418_143022.json  session_manuelita_20260418_162258.json  sources_map_20260418.json
scripts/: test_20_preguntas.py
src/: main.py
src/cleaners/: normalize_entities.py
src/discover/: discover_sources.py
src/langchain_app/: __init__.py  corpus_loader.py  prompts.py  qa_system.py
src/markdown_builders/: build_smart_markdown.py
src/parsers/: parse_pdfs.py
src/scrapers/: scrape_news.py  scrape_social_links.py  scrape_website.py  (+1 more)
templates/: smart_markdown_template.md
(+2 files in other folders)
