[project]
name = "proyecto-osint-manuelita"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "lxml>=5.2.0",
    "playwright>=1.45.0",
    "pdfplumber==0.11.0",
    "PyMuPDF>=1.25.1",
    "pytesseract==0.3.10",
    "Pillow>=10.4.0",
    "newspaper3k==0.2.8",
    "feedparser==6.0.11",
    "google-api-python-client==2.120.0",
    "yt-dlp==2024.3.10",
    "spacy>=3.8.0",
    "langdetect==1.0.9",
    "pandas>=2.2.2",
    "python-frontmatter==1.1.0",
    "jinja2==3.1.4",
    "Markdown==3.6",
    "python-dotenv==1.0.1",
    "tenacity==8.2.3",
    "fake-useragent==1.4.0",
    "tqdm==4.66.2",
    "python-slugify==8.0.4",
    "dateparser==1.2.0",
    "datasketch==1.6.4",
    # --- App Q&A ---
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    "streamlit>=1.40.0",
]

